# ebpf-verifier

./: .gitignore  CMakeLists.txt  flake.nix
src/: asm_cfg.cpp  asm_marshal.cpp  asm_ostream.cpp  asm_parse.cpp  asm_unmarshal.cpp  asm_unmarshal.hpp  platform.hpp  spec_type_descriptors.hpp
src/linux/: linux_platform.cpp
src/main/: linux_verifier.hpp
